Estilos para el header en pantallas grandes

--- a/html/index.html
+++ b/html/index.html
@@ -21,13 +21,13 @@
       <input type="checkbox" id="check">
       <label for="check" class="mostrar-menu">&#8801</label>
       <!-- Aca se crea el menu de navegacion normal-->
-      <nav>
+      <nav class="menu">
         <a href="#">Inicio</a>
         <a href="#">Sobre Nosotros</a>
         <a href="#">Servicios</a>
         <a href="#">Contacto</a>
         <!-- Con esta label se cerrará el menu emergente en dispositivos moviles-->
-        <label for="check" class="esconder-menu">&#</label>
+        <label for="check" class="esconder-menu">&#215</label>
       </nav>
     </header>
     
