Creacion del banner con sus estilos

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header>
-      <h2 class="logo">NR Diseño Web</h2>
+      <a id="logo-link" href="https://nrdisenoweb.com" target="_blank"><h2 class="logo">NR Diseño Web</h2></a>
       <!-- El menu de hamburguesa se inserta en las dos lineas siguientes con un input y una label-->
       <input type="checkbox" id="check">
       <label for="check" class="mostrar-menu">&#8801</label>
@@ -30,6 +30,14 @@
         <label for="check" class="esconder-menu">&#215</label>
       </nav>
     </header>
+
+ <!-- Estructura del banner-->   
+    <div id="banner">
+      <div class="contenido-banner">
+        <h3><span>NR Diseño Web: </span>diseño web responsive<br>mobile friendly</h3>
+        <a href="#" class="boton-banner">comenzar</a>
+      </div>
+    </div>
     
   </body>
 </html>
