--- a/html/index.html
+++ b/html/index.html
@@ -23,8 +23,7 @@
       <!-- Aca se crea el menu de navegacion normal-->
       <nav class="menu">
         <a href="#">Inicio</a>
-        <a href="#">Sobre Nosotros</a>
-        <a href="#">Servicios</a>
+        <a href="#servicios">Servicios</a>
         <a href="#">Contacto</a>
         <!-- Con esta label se cerrará el menu emergente en dispositivos moviles-->
         <label for="check" class="esconder-menu">&#215</label>
@@ -38,6 +37,22 @@
         <a href="#" class="boton-banner">comenzar</a>
       </div>
     </div>
+
+ <!-- Seccion de servicios-->
+    <section id="servicios">
+      <div class="responsive">
+        <img src="/pictures/diseño-responsivo.webp" alt="Diseño responsivo">
+        <h3>Diseño Responsivo</h3>
+        <p>Garantizamos que el sitio web para tu negocio se vea y funcione de manera excepcional en cualquier dispositivo, desde computadoras de escritorio hasta teléfonos móviles.</p>
+        <a href="#">Saber mas</a>
+      </div>
+      <div class="optimizacion-seo">
+        <img src="/pictures/optimizacion-seo.png" alt="Paginas 100% optimizadas para SEO">
+        <h3>Optimización SEO</h3>
+        <p>Al desarrollar el sitio web para tu negocio, implementamos estrategias de SEO para asegurarnos de que no solo sea atractivo, sino también fácilmente encontrado por tu público objetivo.</p>
+        <a href="#">Saber mas</a>
+      </div>
+    </section>
     
   </body>
 </html>
