Adaptación de la seccion de servicios a dispositivos móviles

--- a/html/index.html
+++ b/html/index.html
@@ -40,13 +40,13 @@
 
  <!-- Seccion de servicios-->
     <section id="servicios">
-      <div class="responsive">
+      <div class="tarjetas">
         <img src="/pictures/diseño-responsivo.webp" alt="Diseño responsivo">
         <h3>Diseño Responsivo</h3>
         <p>Garantizamos que el sitio web para tu negocio se vea y funcione de manera excepcional en cualquier dispositivo, desde computadoras de escritorio hasta teléfonos móviles.</p>
         <a href="#">Saber mas</a>
       </div>
-      <div class="optimizacion-seo">
+      <div class="tarjetas">
         <img src="/pictures/optimizacion-seo.png" alt="Paginas 100% optimizadas para SEO">
         <h3>Optimización SEO</h3>
         <p>Al desarrollar el sitio web para tu negocio, implementamos estrategias de SEO para asegurarnos de que no solo sea atractivo, sino también fácilmente encontrado por tu público objetivo.</p>
