creacion y estilo de la seccion "ventajas", utilizando icnos de awesome

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"/>
 
     <link rel="stylesheet" href="/css/styles.css" />
+    <script src="https://kit.fontawesome.com/9c7100c4f0.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -51,6 +52,26 @@
         <h3>Optimización SEO</h3>
         <p>Al desarrollar el sitio web para tu negocio, implementamos estrategias de SEO para asegurarnos de que no solo sea atractivo, sino también fácilmente encontrado por tu público objetivo.</p>
         <a href="#">Saber mas</a>
+      </div>
+    </section>
+
+    <section id="iconos">
+      <div id="contenido-iconos">
+        <div>
+          <i class="fa-solid fa-ranking-star fa-3x"></i>
+          <h3>Compite en el mercado</h3>
+          <p>Un sitio web bien diseñado te diferencia de la competencia y te posiciona como líder en tu industria.</p>
+        </div>
+        <div class="tarjeta-central">
+          <i class="fa-solid fa-bug-slash fa-3x"></i>
+          <h3>Optimización Instantánea</h3>
+          <p>Identifica áreas de oportunidad de inmediato y tomar decisiones de manera rápida y eficiente.</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-chart-line fa-3x"></i>
+          <h3>Aumenta tu Rentabilidad</h3>
+          <p>Aumenta tu rentabilidad y acelera el crecimiento sostenible de tu negocio con un sitio web estrategicamente diseñado</p>
+        </div>
       </div>
     </section>
     
