ajuste del responsive de la seccion de iconos

--- a/html/index.html
+++ b/html/index.html
@@ -56,14 +56,14 @@
     </section>
 
     <section id="iconos">
-      <div id="contenido-iconos">
+      <div class="contenido-iconos">
         <div>
           <i class="fa-solid fa-ranking-star fa-3x"></i>
           <h3>Compite en el mercado</h3>
           <p>Un sitio web bien diseñado te diferencia de la competencia y te posiciona como líder en tu industria.</p>
         </div>
         <div class="tarjeta-central">
-          <i class="fa-solid fa-bug-slash fa-3x"></i>
+          <i class="fa-solid fa-rocket fa-3x"></i>
           <h3>Optimización Instantánea</h3>
           <p>Identifica áreas de oportunidad de inmediato y tomar decisiones de manera rápida y eficiente.</p>
         </div>
