Diseño y estilos del formulario de contacto y adecuacion para pantallas pequeñas

--- a/html/index.html
+++ b/html/index.html
@@ -55,6 +55,8 @@
       </div>
     </section>
 
+    <!-- Seccion de iconos -->
+
     <section id="iconos">
       <div class="contenido-iconos">
         <div>
@@ -74,6 +76,33 @@
         </div>
       </div>
     </section>
-    
+
+  <!-- Seccion de contacto -->
+
+    <section id="contacto">
+      <h3>Contacta con nosotros</h3>
+      <form action="#">
+        <div class="datos-form">
+          <div class="datos-nombre">
+            <label for="nombre">Nombre</label>
+            <input type="text" nombre="nombre" id="nombre" placeholder="Nombre y Apellido">
+          </div>
+          <div class="datos-nombre">
+            <label for="email">Email</label>
+            <input type="email" nombre="email" id="email" placeholder="Correo Eléctronico">
+          </div>
+        </div>
+        <div class="mensaje">
+          <label for="mensaje">Mensaje</label>
+          <textarea name="mensaje" id="mensaje" cols="30" rows="10" placeholder="Pregunta lo que quieras"></textarea>
+        </div>
+        <div class="boton-formulario">
+          <a href="#">Enviar</a>
+        </div>
+      </form>
+    </section>
+    <footer>
+      <p>CREADO POR NRAUL17 COMO PARTE DEL CURSO DE HTML5 | &COPY; 2024</p>
+    </footer>  
   </body>
 </html>
