--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"/>
 
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://kit.fontawesome.com/9c7100c4f0.js" crossorigin="anonymous"></script>
   </head>
 
@@ -42,13 +42,13 @@
  <!-- Seccion de servicios-->
     <section id="servicios">
       <div class="tarjetas">
-        <img src="/pictures/diseño-responsivo.webp" alt="Diseño responsivo">
+        <img src="pictures/diseño-responsivo.webp" alt="Diseño responsivo">
         <h3>Diseño Responsivo</h3>
         <p>Garantizamos que el sitio web para tu negocio se vea y funcione de manera excepcional en cualquier dispositivo, desde computadoras de escritorio hasta teléfonos móviles.</p>
         <a href="#">Saber mas</a>
       </div>
       <div class="tarjetas">
-        <img src="/pictures/optimizacion-seo.png" alt="Paginas 100% optimizadas para SEO">
+        <img src="pictures/optimizacion-seo.png" alt="Paginas 100% optimizadas para SEO">
         <h3>Optimización SEO</h3>
         <p>Al desarrollar el sitio web para tu negocio, implementamos estrategias de SEO para asegurarnos de que no solo sea atractivo, sino también fácilmente encontrado por tu público objetivo.</p>
         <a href="#">Saber mas</a>
